force-app/main/default/objects/NSC_To_QuBy_Quote__c/NSC_To_QuBy_Quote__c.object-meta.xml
<CustomObject>
    <label>NSC To QuBy Quote</label>
    <nameField>
        <displayFormat>NTQ-{0000}</displayFormat>
        <label>NTQ Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSC To QuBy Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>