force-app/main/default/objects/NSC_To_QuBy_Quote__c/fields/Account_LOB__c.field-meta.xml
<CustomField>
    <fullName>Account_LOB__c</fullName>
    <label>Account LOB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>