force-app/main/default/objects/NSC_To_QuBy_Quote__c/fields/Account_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member__c</fullName>
    <label>Account Team Member</label>
    <length>100</length>
    <type>Text</type>
</CustomField>