force-app/main/default/objects/NSC_To_QuBy_Quote__c/fields/Linkage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Linkage_Flag__c</fullName>
    <label>Linkage Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>