force-app/main/default/objects/NSC_To_QuBy_Quote__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>