force-app/main/default/objects/NSC_To_QuBy_Quote__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <label>Opportunity Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>