force-app/main/default/objects/NSC_To_QuBy_Quote__c/fields/Opportunity_Owner_QLID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_QLID__c</fullName>
    <label>Opportunity Owner QLID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>