force-app/main/default/objects/NSC_To_QuBy_Quote__c/fields/Updated_Date_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date_Timestamp__c</fullName>
    <label>Updated Date Timestamp</label>
    <type>DateTime</type>
</CustomField>